<resources>
    <string name="app_name">UIDesign</string>
    <string name="welcome">Welcome</string>
    <string name="login_name">用户名：</string>
    <string name="login_name_hint">请输入用户名</string>
    <string name="login_password">密码：</string>
    <string name="login_password_hint">请输入密码</string>
    <string name="login_button">登录</string>
    <string name="register_button">注册</string>
    <string name="other_login_text">第三方平台登录</string>
    <string name="about">关于</string>
    <string name="stuid">StuID：1711425</string>
    <string name="github">GitHub：LoveBettygirl</string>
    <string name="yes">确定</string>
    <string name="date">Date：Apr 18,&#160;&#160;2020</string>
    <string name="edit_profile">编辑个人信息</string>
    <string name="exit_login">退出登录</string>
    <string name="save">保存</string>
    <string name="nickname">昵称&#160;*</string>
    <string name="nickname_hint">不超过20个字符，必填</string>
    <string name="must_hint">以下两项仅用于身份验证，不会被展示在个人主页哦~</string>
    <string name="phone_number">手机号</string>
    <string name="phone_number_hint">手机号码，3~15位</string>
    <string name="email">邮箱</string>
    <string name="email_hint">example@example.com</string>
    <string name="sex">性别&#160;*</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="birthday">生日</string>
    <string name="province">所在地</string>
    <string name="job">职业身份</string>
    <string name="hobby">兴趣爱好</string>
    <string name="motto">个性签名</string>
    <string name="travel">旅行和摄影</string>
    <string name="art">文学和艺术</string>
    <string name="sports">体育运动</string>
    <string name="food">美食</string>
    <string name="movie_music">影视和音乐</string>
    <string name="play">休闲娱乐</string>
    <string name="chat">社交</string>
    <string name="study">学习</string>
    <string name="stay_home">宅家</string>
    <string name="sleep">睡觉</string>
    <string name="profile_progress">当前资料完成度：</string>
    <string name="profile_id">1711425</string>
    <string name="base_profile">基本资料</string>
    <string name="describe">个人介绍</string>
    <string name="login_from">&#160;通过用户名密码登录</string>
    <string name="login_from_weixin">&#160;通过微信帐户登录</string>
    <string name="login_from_weibo">&#160;通过微博帐户登录</string>
    <string name="login_from_qq">&#160;通过QQ帐户登录</string>
    <string name="button">button</string>
    <string name="profile_page_title">个人主页</string>
    <string name="edit_profile_page_title">编辑个人信息</string>
    <string name="login_page_title">帐户登录</string>
    <string name="nickname_display">昵称：%s</string>
    <string name="sex_display">性别：%s</string>
    <string name="display_default">未设置</string>
    <string name="likes_display">赞&#160;%d</string>
    <string name="birthday_display">生日：%s</string>
    <string name="date_format">yyyy-MM-dd</string>
    <string name="age_display">年龄：%s</string>
    <string name="age_format">%d岁</string>
    <string name="zodiac_display">生肖：%s</string>
    <string name="star_sign_display">星座：%s</string>
    <string name="nickname_tips_content">还能输入%d个字符</string>
    <string name="phone_tips_content_less">还能输入%d个字符，不得少于3个字符</string>
    <string name="phone_tips_content_more">还能输入%d个字符</string>
    <string name="email_tips_content_empty">邮箱格式见提示</string>
    <string name="email_tips_content_matched">邮箱格式正确</string>
    <string name="email_tips_content_unmatched">邮箱格式不正确</string>
    <string name="hobby_count_display">兴趣爱好（当前已选中%d个）</string>
    <string name="motto_display_less">个性签名（%d/50）</string>
    <string name="motto_display_more">个性签名（%d/50，已超出最大长度）</string>
    <string name="progress_display">当前资料完成度：%d%%（带*的项目为必填项）</string>
    <string name="cancel">取消</string>
    <string name="ok">确定</string>
    <string name="give_up">放弃更改</string>
    <string name="give_up_q">是否放弃更改？</string>
    <string name="save_success">已保存</string>
    <string name="save_fail">保存失败，请检查并修改红色提示项</string>
    <string name="exit_program">再按一次退出程序</string>
    <string name="exit_login_success">已退出登录</string>
    <string name="cannot_register">暂不提供注册功能~</string>
    <string name="qq_login">正在使用QQ帐户登录......</string>
    <string name="weixin_login">正在使用微信帐户登录......</string>
    <string name="weibo_login">正在使用微博帐户登录......</string>
    <string name="name_login">正在使用用户名密码登录......</string>
    <string name="login_error">用户名或密码错误</string>
    <string name="name_cannot_empty">用户名不能为空</string>
    <string name="password_cannot_empty">密码不能为空</string>
    <string name="about_title">About</string>
    <string name="nickname_cannot_empty">昵称不能为空！</string>
    <string name="switch_theme_text">切换主题</string>
    <string name="purple_theme">基佬紫（默认）</string>
    <string name="red_theme">爱心红</string>
    <string name="yellow_theme">柠檬黄</string>
    <string name="green_theme">帽子绿</string>
    <string name="pink_theme">可爱粉</string>
    <string name="blue_theme">天空蓝</string>
    <string name="setting_theme">正在切换主题......</string>
    <string name="set_theme_success">切换主题成功</string>
    <string name="login_success">已登录</string>
</resources>
