<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/edit_profile_background_scroll"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:fadingEdge="vertical"
    android:gravity="center"
    tools:context=".EditProfileActivity">

    <LinearLayout
        android:id="@+id/edit_profile_background"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:divider="@drawable/divider"
        android:showDividers="middle"
        android:padding="10dip">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:padding="5dip">

            <TextView
                android:id="@+id/profile_progress_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="5dip"
                android:text="@string/profile_progress">
            </TextView>
            <ProgressBar
                android:id="@+id/profile_progress"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingTop="5dip"
                android:paddingBottom="5dip"
                android:layout_below="@id/profile_progress_text"
                style="?android:attr/progressBarStyleHorizontal"
                android:max="100">
            </ProgressBar>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:padding="5dip">

            <TextView
                android:id="@+id/nickname_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="15dip"
                android:maxWidth="75dip"
                android:minWidth="75dip"
                android:text="@string/nickname">
            </TextView>
            <EditText
                android:id="@+id/nickname_edit"
                android:layout_width="wrap_content"
                android:layout_height="40dip"
                android:hint="@string/nickname_hint"
                android:layout_toRightOf="@id/nickname_text"
                android:layout_toEndOf="@id/nickname_text"
                android:minWidth="315dip"
                android:maxWidth="315dip"
                android:layout_marginTop="5dip"
                android:padding="5dip"
                android:background="@drawable/motto_edit_text"
                android:inputType="text"
                android:autofillHints="">
            </EditText>
            <TextView
                android:id="@+id/nickname_tips"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/nickname_edit"
                android:layout_alignStart="@id/nickname_edit"
                android:layout_alignLeft="@id/nickname_edit"
                android:paddingTop="5dip"
                android:paddingBottom="5dip"
                android:text="@string/nickname">
            </TextView>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:padding="5dip">
            <TextView
                android:id="@+id/must_hint_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/phone_number_text"
                android:layout_alignStart="@id/phone_number_text"
                android:layout_marginTop="5dip"
                android:layout_marginBottom="5dip"
                android:text="@string/must_hint">
            </TextView>
            <TextView
                android:id="@+id/phone_number_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/must_hint_text"
                android:paddingTop="15dip"
                android:maxWidth="75dip"
                android:minWidth="75dip"
                android:text="@string/phone_number">
            </TextView>
            <EditText
                android:id="@+id/phone_number_edit"
                android:layout_width="wrap_content"
                android:layout_height="40dip"
                android:layout_below="@id/must_hint_text"
                android:layout_marginTop="5dip"
                android:hint="@string/phone_number_hint"
                android:layout_toRightOf="@id/phone_number_text"
                android:layout_toEndOf="@id/phone_number_text"
                android:minWidth="315dip"
                android:maxWidth="315dip"
                android:padding="5dip"
                android:background="@drawable/motto_edit_text"
                android:inputType="phone"
                android:autofillHints="">
            </EditText>
            <TextView
                android:id="@+id/phone_number_tips"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/phone_number_edit"
                android:layout_alignStart="@id/phone_number_edit"
                android:layout_alignLeft="@id/phone_number_edit"
                android:paddingTop="5dip"
                android:paddingBottom="10dip"
                android:text="@string/phone_number">
            </TextView>
            <TextView
                android:id="@+id/email_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="57dip"
                android:layout_below="@id/phone_number_text"
                android:layout_alignLeft="@id/phone_number_text"
                android:layout_alignStart="@id/phone_number_text"
                android:maxWidth="75dip"
                android:minWidth="75dip"
                android:text="@string/email">
            </TextView>
            <EditText
                android:id="@+id/email_edit"
                android:layout_width="wrap_content"
                android:layout_height="40dip"
                android:hint="@string/email_hint"
                android:layout_toRightOf="@id/email_text"
                android:layout_toEndOf="@id/email_text"
                android:layout_below="@id/phone_number_tips"
                android:minWidth="315dip"
                android:maxWidth="315dip"
                android:padding="5dip"
                android:background="@drawable/motto_edit_text"
                android:inputType="textEmailAddress"
                android:autofillHints="">
            </EditText>
            <TextView
                android:id="@+id/email_tips"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/email_edit"
                android:layout_alignStart="@id/email_edit"
                android:layout_alignLeft="@id/email_edit"
                android:paddingTop="5dip"
                android:paddingBottom="5dip"
                android:text="@string/email">
            </TextView>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:padding="5dip">
            <TextView
                android:id="@+id/sex_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="9dip"
                android:maxWidth="75dip"
                android:minWidth="75dip"
                android:text="@string/sex">
            </TextView>
            <RadioGroup
                android:id="@+id/sex_group"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="3dip"
                android:layout_marginBottom="3dip"
                android:layout_toRightOf="@id/sex_text"
                android:layout_toEndOf="@id/sex_text">
                <RadioButton
                    android:id="@+id/sex_male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/male">
                </RadioButton>
                <RadioButton
                    android:id="@+id/sex_female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dip"
                    android:layout_marginLeft="50dip"
                    android:text="@string/female">
                </RadioButton>
            </RadioGroup>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:padding="5dip">
            <TextView
                android:id="@+id/birthday_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="15dip"
                android:maxWidth="75dip"
                android:minWidth="75dip"
                android:text="@string/birthday">
            </TextView>

            <!-- 去掉Button默认灰色边框：style="?android:attr/borderlessButtonStyle" -->
            <Button
                android:id="@+id/birthday_set"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/birthday_text"
                android:layout_toEndOf="@id/birthday_text"
                android:paddingStart="9dip"
                android:paddingLeft="9dip"
                android:paddingEnd="30dip"
                android:paddingRight="30dip"
                android:background="#00000000"
                style="?android:attr/borderlessButtonStyle"
                android:text="@string/button">
            </Button>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:padding="5dip">
            <TextView
                android:id="@+id/province_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="5dip"
                android:maxWidth="75dip"
                android:minWidth="75dip"
                android:text="@string/province">
            </TextView>
            <Spinner
                android:id="@+id/select_province"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/province_text"
                android:layout_toEndOf="@id/province_text"
                android:layout_marginTop="3dip"
                android:layout_marginBottom="5dip"
                android:spinnerMode="dialog"
                android:prompt="@string/province"
                android:entries="@array/provinces">
            </Spinner>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:padding="5dip">
            <TextView
                android:id="@+id/job_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="5dip"
                android:maxWidth="75dip"
                android:minWidth="75dip"
                android:text="@string/job">
            </TextView>
            <Spinner
                android:id="@+id/select_job"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/job_text"
                android:layout_toEndOf="@id/job_text"
                android:layout_marginTop="3dip"
                android:layout_marginBottom="5dip"
                android:spinnerMode="dialog"
                android:prompt="@string/job"
                android:entries="@array/jobs">
            </Spinner>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:padding="5dip">
            <TextView
                android:id="@+id/hobby_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="5dip"
                android:paddingBottom="10dip"
                android:text="@string/hobby">
            </TextView>
            <CheckBox
                android:id="@+id/travel_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/hobby_text"
                android:layout_marginLeft="63dip"
                android:layout_marginStart="63dip"
                android:text="@string/travel">
            </CheckBox>
            <CheckBox
                android:id="@+id/art_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/hobby_text"
                android:layout_toRightOf="@id/travel_button"
                android:layout_toEndOf="@id/travel_button"
                android:layout_alignBottom="@id/travel_button"
                android:layout_marginLeft="50dip"
                android:layout_marginStart="50dip"
                android:text="@string/art">
            </CheckBox>
            <CheckBox
                android:id="@+id/sports_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/travel_button"
                android:layout_alignStart="@id/travel_button"
                android:layout_alignLeft="@id/travel_button"
                android:text="@string/sports">
            </CheckBox>
            <CheckBox
                android:id="@+id/food_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/sports_button"
                android:layout_toEndOf="@id/sports_button"
                android:layout_alignBottom="@id/sports_button"
                android:layout_alignStart="@id/art_button"
                android:layout_alignLeft="@id/art_button"
                android:text="@string/food">
            </CheckBox>
            <CheckBox
                android:id="@+id/movie_music_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/sports_button"
                android:layout_alignStart="@id/travel_button"
                android:layout_alignLeft="@id/travel_button"
                android:text="@string/movie_music">
            </CheckBox>
            <CheckBox
                android:id="@+id/play_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/movie_music_button"
                android:layout_toEndOf="@id/movie_music_button"
                android:layout_alignBottom="@id/movie_music_button"
                android:layout_alignStart="@id/art_button"
                android:layout_alignLeft="@id/art_button"
                android:text="@string/play">
            </CheckBox>
            <CheckBox
                android:id="@+id/chat_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/movie_music_button"
                android:layout_alignStart="@id/travel_button"
                android:layout_alignLeft="@id/travel_button"
                android:text="@string/chat">
            </CheckBox>
            <CheckBox
                android:id="@+id/study_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/chat_button"
                android:layout_toEndOf="@id/chat_button"
                android:layout_alignBottom="@id/chat_button"
                android:layout_alignStart="@id/art_button"
                android:layout_alignLeft="@id/art_button"
                android:text="@string/study">
            </CheckBox>
            <CheckBox
                android:id="@+id/stay_home_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/chat_button"
                android:layout_alignStart="@id/travel_button"
                android:layout_alignLeft="@id/travel_button"
                android:layout_marginBottom="5dip"
                android:text="@string/stay_home">
            </CheckBox>
            <CheckBox
                android:id="@+id/sleep_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/stay_home_button"
                android:layout_toEndOf="@id/stay_home_button"
                android:layout_alignBottom="@id/stay_home_button"
                android:layout_alignStart="@id/art_button"
                android:layout_alignLeft="@id/art_button"
                android:text="@string/sleep">
            </CheckBox>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:padding="5dip">
            <TextView
                android:id="@+id/motto_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="5dip"
                android:text="@string/motto">
            </TextView>
            <EditText
                android:id="@+id/motto_edit"
                android:layout_width="fill_parent"
                android:layout_height="90dip"
                android:layout_below="@id/motto_text"
                android:layout_marginTop="10dip"
                android:minLines="5"
                android:maxLines="5"
                android:gravity="top"
                android:padding="5dip"
                android:background="@drawable/motto_edit_text"
                android:textSize="14dip"
                android:autofillHints=""
                android:scrollbars="vertical"
                android:inputType="textMultiLine" />
        </RelativeLayout>
    </LinearLayout>
</ScrollView>