<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_background"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".LoginActivity">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:layout_weight="1">

        <TextView
            android:id="@+id/login_name_text"
            android:layout_width="wrap_content"
            android:layout_height="30dip"
            android:text="@string/login_name"
            android:layout_marginLeft="10dip"
            android:layout_marginStart="10dip"
            android:layout_alignBottom="@id/login_name_edit"
            android:minWidth="75dip"
            android:maxWidth="75dip"
            android:paddingBottom="11dip">
        </TextView>
        <AutoCompleteTextView
            android:id="@+id/login_name_edit"
            android:layout_width="wrap_content"
            android:layout_height="40dip"
            android:hint="@string/login_name_hint"
            android:layout_toRightOf="@id/login_name_text"
            android:layout_toEndOf="@id/login_name_text"
            android:minWidth="200dip"
            android:maxWidth="200dip"
            android:padding="5dip"
            android:background="@drawable/motto_edit_text"
            android:inputType="text"
            android:completionThreshold="1"
            android:autofillHints="">
        </AutoCompleteTextView>
        <TextView
            android:id="@+id/login_password_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/login_name_text"
            android:layout_alignLeft="@id/login_name_text"
            android:layout_alignStart="@id/login_name_text"
            android:text="@string/login_password"
            android:layout_alignBottom="@id/login_password_edit"
            android:minWidth="75dip"
            android:maxWidth="75dip"
            android:paddingTop="20dip">
        </TextView>
        <AutoCompleteTextView
            android:id="@+id/login_password_edit"
            android:layout_width="wrap_content"
            android:layout_height="40dip"
            android:hint="@string/login_password_hint"
            android:layout_toRightOf="@id/login_password_text"
            android:layout_toEndOf="@id/login_password_text"
            android:layout_below="@id/login_name_edit"
            android:layout_alignLeft="@id/login_name_edit"
            android:layout_alignStart="@id/login_name_edit"
            android:layout_alignRight="@id/login_name_edit"
            android:layout_alignEnd="@id/login_name_edit"
            android:background="@drawable/motto_edit_text"
            android:layout_marginTop="10dip"
            android:padding="5dip"
            android:inputType="textPassword"
            android:completionThreshold="1"
            android:autofillHints="">
        </AutoCompleteTextView>
        <Button
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/login_password_text"
            android:layout_alignLeft="@id/login_password_text"
            android:layout_alignStart="@id/login_password_text"
            android:text="@string/login_button"
            android:textColor="#ffffff"
            android:alpha="0.7"
            android:layout_marginTop="15dip"
            android:minWidth="100dip"
            android:maxWidth="100dip"
            android:background="@drawable/button_rectangle">
        </Button>
        <Button
            android:id="@+id/register_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/login_password_edit"
            android:layout_alignTop="@id/login_button"
            android:layout_alignRight="@id/login_password_edit"
            android:layout_alignEnd="@id/login_password_edit"
            android:layout_alignBottom="@id/login_button"
            android:alpha="0.7"
            android:text="@string/register_button"
            android:textColor="#ffffff"
            android:minWidth="100dip"
            android:maxWidth="100dip"
            android:background="@drawable/button_rectangle">
        </Button>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/other_login_layout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="3"
        android:layout_gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_gravity="center"
            android:layout_weight="3"
            android:text="@string/other_login_text" />

        <RelativeLayout
            android:id="@+id/other_login_button"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:layout_gravity="center">

            <ImageButton
                android:id="@+id/button_weibo"
                android:layout_width="50dip"
                android:layout_height="50dip"
                android:layout_alignParentTop="true"
                android:layout_centerInParent="true"
                android:background="@drawable/weibo"
                android:contentDescription="@string/weibo_login"/>

            <ImageButton
                android:id="@+id/button_weixin"
                android:layout_width="50dip"
                android:layout_height="50dip"
                android:layout_toLeftOf="@id/button_weibo"
                android:layout_toStartOf="@id/button_weibo"
                android:layout_alignBottom="@id/button_weibo"
                android:contentDescription="@string/weixin_login"
                android:background="@drawable/weixin"
                android:layout_marginRight="30dip"
                android:layout_marginEnd="30dip" />

            <ImageButton
                android:id="@+id/button_qq"
                android:layout_width="50dip"
                android:layout_height="50dip"
                android:layout_toRightOf="@id/button_weibo"
                android:layout_toEndOf="@id/button_weibo"
                android:layout_alignBottom="@id/button_weibo"
                android:contentDescription="@string/qq_login"
                android:background="@drawable/qq"
                android:layout_marginLeft="30dip"
                android:layout_marginStart="30dip" />
        </RelativeLayout>

    </LinearLayout>


</LinearLayout>